June 2017
  - Support multiple configurations for same account type
  - PHP 7.1 compatibility
  - Samba 3: added account expiration date to PDF fields
  - Windows: Support unlocking of users with too many failed login attempts
  - LAM Pro:
   -> Custom fields: can be used for file upload
   -> Kopano support


15.03.2017 5.7
  - 2-factor authentication for admin login and self service with privacyIDEA
  - PDF files use DejaVu serif font for better readability and more supported characters (e.g. Cyrillic)
  - Windows users: the department option now uses attribute "department" instead of "departmentNumber"
  - Updated Debian dependencies
  - Fixed bugs:
   -> Comparison issue prevents saving of values (185)


18.12.2016 5.6
  - New mechanism to replace wildcards in user edit screen. Personal/Unix support more wildcards like "$firstname".
  - Windows: added support for pager, otherPager, mobile, otherMobile, company and proxyAddresses (disabled by default in server profile)
  - Mail routing: enable for groups and allow to add/remove the extension
  - LAM Pro:
   -> Password self reset: support for up to 3 security questions
   -> 389ds: new wildcards for custom scripts: $INFO.389lockingStatusChange$ and $INFO.389deactivationStatusChange$
   -> Custom scripts: custom button label supported for manual scripts


10.09.2016 5.5
  - Windows: allow to show effective members of a group
  - Lamdaemon: support SSH key authentication
  - LAM Pro:
   -> Group of names/members + roles: allow to show effective members of a group
   -> Cron jobs:
     * Move or delete expired accounts (Shadow, Windows, qmail, FreeRadius)
     * 389ds: added job to notify before password expires
   -> 389ds: manage password expiration time with module "Account locking"
  - Fixed bugs:
   -> PHP 7 issues on edit page


21.06.2016 5.4
  - Unix: support magic numbers for UIDs/GIDs (e.g. 389 server DNA plugin)
  - Samba 3: support for Samba password history (RFE 133)
  - LAM Pro: