@@ -5026,6 +5026,39 @@ OK (10 msec)</programlisting>
       </mediaobject>
     </screenshot>
 
+    <para><emphasis role="bold">LDAP search select list</emphasis></para>
+
+    <para>This is similar to "Select list" but the option are read from LDAP.
+    You can use this to define e.g. a DN selection list. Multiple values are
+    supported.</para>
+
+    <screenshot>
+      <mediaobject>
+        <imageobject>
+          <imagedata fileref="images/customFields26.png" />
+        </imageobject>
+      </mediaobject>
+    </screenshot>
+
+    <para>LDAP suffix: The LDAP DN that is used as starting point to search
+    for LDAP entries.</para>
+
+    <para>LDAP filter: Only LDAP entries that match this filter will be used.
+    If all entries should be used then use "(objectclass=*)".</para>
+
+    <para>Attribute name: The values of this attribute will be used to build
+    the selection list.</para>
+
+    <para>Presentation:</para>
+
+    <screenshot>
+      <mediaobject>
+        <imageobject>
+          <imagedata fileref="images/customFields27.png" />
+        </imageobject>
+      </mediaobject>
+    </screenshot>
+
     <para id="customFields_validation_expressions_admin"><emphasis
     role="bold">Validation expressions:</emphasis></para>
 
